--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "rakamin",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://www.galihhhp.tech/v1",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +9,7 @@
     "axios": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.2.4",
     "web-vitals": "^2.1.4"
